# office_automation

./: .env.example  .gitignore  CLAUDE.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: b897d1b282cb_initial_tables.py
scripts/: scan_deep.py  scan_infoniqa.py  scan_invoice_form.py  scan_kundenbelege.py  scan_menu_details.py  scan_ribbon.py  scan_ribbon2.py  scan_windows.py  screenshot_focused.py  screenshot_infoniqa.py
src/: main.py
src/booking/: matcher.py
src/bot/: app.py  auth.py  handlers.py
src/common/: config.py  database.py  logging.py  models.py  queue.py  schemas.py
src/extraction/: vision.py
src/rpa/: processor.py
src/rpa/infoniqa/: booking.py  invoice.py  navigation.py
tests/: conftest.py  test_config.py  test_invoice.py  test_models.py  test_navigation.py  test_processor.py  test_schemas.py  test_vision.py
